[gd_scene load_steps=6 format=2]

[ext_resource path="res://resources/ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/ui/inventory_item.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/screens/market_place.gd" type="Script" id=3]
[ext_resource path="res://resources/font/ui_font_bold_small.tres" type="DynamicFont" id=4]
[ext_resource path="res://scenes/ui/wallet_info.tscn" type="PackedScene" id=6]

[node name="ScreenInventory" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = 150.0
margin_right = -32.0
margin_bottom = -32.0
theme = ExtResource( 1 )
script = ExtResource( 3 )

[node name="WalletInfo" parent="." instance=ExtResource( 6 )]
margin_left = -718.0
margin_top = -115.0
margin_right = 62.0
margin_bottom = -35.0
rect_pivot_offset = Vector2( 968, 281 )

[node name="TabContainer" type="TabContainer" parent="."]
anchor_right = 0.689
anchor_bottom = 1.0
margin_right = -0.303955
tab_align = 0

[node name="Market" type="Tabs" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 110.0
margin_right = -40.0
margin_bottom = -40.0

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Market"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="GridContainer" type="GridContainer" parent="TabContainer/Market/ScrollContainer"]
margin_right = 978.0
margin_bottom = 568.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 20
custom_constants/hseparation = 20

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.708
anchor_right = 0.998
anchor_bottom = 1.003
margin_left = -0.488037
margin_right = 0.0720215
margin_bottom = -0.153992

[node name="ScrollContainer" type="ScrollContainer" parent="Panel"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -150.0
margin_top = 16.0
margin_right = 152.0
margin_bottom = -57.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/ScrollContainer"]
margin_right = 300.0
margin_bottom = 248.0
rect_min_size = Vector2( 300, 0 )
custom_constants/separation = 10

[node name="Control" type="Control" parent="Panel/ScrollContainer/VBoxContainer"]
margin_right = 300.0
margin_bottom = 180.0
rect_min_size = Vector2( 0, 180 )

[node name="InventoryItem" parent="Panel/ScrollContainer/VBoxContainer/Control" instance=ExtResource( 2 )]
visible = false
focus_mode = 2
clickable = false

[node name="Name" type="Label" parent="Panel/ScrollContainer/VBoxContainer"]
margin_top = 190.0
margin_right = 300.0
margin_bottom = 238.0
rect_min_size = Vector2( 0, 48 )
custom_fonts/font = ExtResource( 4 )
align = 1

[node name="StatList" type="VBoxContainer" parent="Panel/ScrollContainer/VBoxContainer"]
margin_top = 248.0
margin_right = 300.0
margin_bottom = 248.0

[node name="BuyButton" type="Button" parent="Panel/ScrollContainer/VBoxContainer"]
visible = false
margin_top = 240.0
margin_right = 300.0
margin_bottom = 340.0
text = "Buy"

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -304.0
margin_top = -109.0
margin_right = 302.0
margin_bottom = 65.0
dialog_text = "Confirm to buy this equipment ?"

[connection signal="pressed" from="Panel/ScrollContainer/VBoxContainer/BuyButton" to="." method="_on_BuyButton_pressed"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_ConfirmationDialog_confirmed"]
